# MemTransformer

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  FINAL_RELEASE_v0.1.0-alpha.md
examples/: memory_win_test.py  quickstart_architecture.py  tiny_dataset_demo.py
memtransformer/: config.py  memory_core.py  model.py
minimem/: __init__.py  api.py  policy.py
